test_src/compiler_errors/types/binary/LeftShiftBoolError4.b
class LeftShiftBoolError4 {
    void test() {
        var value = true;
        println(value <<= 6);
    }
}
